--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "concat-stream": "~1.5.0",
     "connect-history-api-fallback": "^1.1.0",
     "del": "~1.2.0",
+    "easy-locale": "^1.1.1",
     "gulp": "~3.9.0",
     "gulp-angular-templatecache": "~1.6.0",
     "gulp-autoprefixer": "~2.3.1",
